# FastAPI-Work

FastAPIPost/: pyproject.toml
src/fastapipost/: __init__.py  main.py
